fixed styling on mobile

--- a/frontend/src/components/_BookingList.scss
+++ b/frontend/src/components/_BookingList.scss
@@ -1,33 +1,31 @@
-
 .booking-list {
-  margin-top: var(--big-space);
-  align-items: stretch;
+    align-items: stretch;
 
-  &.card-grid {
-grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
-
-  }
-
-  .card {
-    min-height: 100%;
-    width: 100%;
-    cursor: default;
-    transform: none;
-
-    &:hover {
-      transform: none;
-      box-shadow: var(--box-shadow);
+    &.card-grid {
+        grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
     }
 
-    &__cta {
-      transform: none;
-    }
+    .card {
+        min-height: 100%;
+        width: 100%;
+        cursor: default;
+        transform: none;
 
-    &__body {
-      min-width: 0;
+        &:hover {
+            transform: none;
+            box-shadow: var(--box-shadow);
+        }
+
+        &__cta {
+            transform: none;
+        }
+
+        &__body {
+            min-width: 0;
+        }
+
+        &__desc {
+            font-size: 1rem;
+        }
     }
-    &__desc {
-        font-size: 1rem;
-    }
-  }
 }
