--- a/frontend/src/pages/_Auth.scss
+++ b/frontend/src/pages/_Auth.scss
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-inline: var(--big-space);
 
   &__card {
     background: var(--primary-color);
